syntax = "proto3";

package fs.base;

//作为API请求用，放在body里
message Meta {
    string face = 1;
    string longitude = 2;
    string latitude = 3;
    string validate = 4;
    string id = 5;
}

message State {
    int64 code = 1;
    bool ok = 2;
    string message = 3;
}

message Response {
    State state = 1;
}

//作为服务间传输用
message Metadata {
    string clientId = 1;
    string projectId = 2;
    string userId = 3;
    string ip = 4;
    string token = 5;
    string device = 6;
    string userAgent = 7;
    int64 platform = 8;
    string api = 9;
}

message KeyValue {
    string key = 1;
    string value = 2;
    int64 type = 3;
    bool must = 4; //必须填写
}

message DirectMessage {
    string to = 1;
    string content = 2;
}